fixed spacing and moved to front page

--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -351,7 +351,7 @@ strong {
 }
 
 #email-form {
-  max-width: 43ch;
+  max-width: 30ch;
 }
 
 @media screen and (max-width: 991px) {
